tests/fixtures/invalid/int_bitand_list.py
# Cannot bitwise AND Int and List[int]
x: int = 1 & [1, 2, 3]
